TestArchive/large_test/cycle_0022/build.err
perl: warning: Setting locale failed.
perl: warning: Please check that your locale settings:
	LANGUAGE = (unset),
	LC_ALL = (unset),
	LC_CTYPE = "C.UTF-8",
	LANG = "en_US.UTF-8"
    are supported and installed on your system.
perl: warning: Falling back to the standard locale ("C").
%Warning-UNOPTFLAT: /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:47:12: Signal unoptimizable: Circular combinational logic: 'tb_top.dut.relational_wrapper_in_flat'
   47 | wire [7:0] relational_wrapper_in_flat;
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
                    ... For warning description see https://verilator.org/warn/UNOPTFLAT?v=5.033
                    ... Use "/* verilator lint_off UNOPTFLAT */" and lint_on around source to disable this message.
                    /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:47:12:      Example path: tb_top.dut.relational_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/relational_wrapper.sv:23:8:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:48:12:      Example path: tb_top.dut.relational_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:278:37:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:49:13:      Example path: tb_top.dut.select_wrapper_in_flat
                    /opt/module-fuzz/rewiring/../test_libraries/comprehensive_tests/flattened/select_wrapper.sv:18:8:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:50:12:      Example path: tb_top.dut.select_wrapper_out_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:390:65:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:57:13:      Example path: tb_top.dut.width_struct_wrapper_in_flat
                    /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:400:69:      Example path: ASSIGNW
                    /opt/module-fuzz/rewiring/large_test/cycle_0022/top.sv:47:12:      Example path: tb_top.dut.relational_wrapper_in_flat
%Error: Exiting due to 1 warning(s)
